--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
   />
   <title>SWC Demo</title>
+  <link rel="stylesheet" href="./assets/reset.css">
 </head>
 
 <body>
