--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   />
   <title>SWC Demo</title>
   <link rel="stylesheet" href="./assets/reset.css">
+  <link rel="stylesheet" href="./assets/base.css">
 </head>
 
 <body>
